TRAV-110-fix(dropdown): Add scrollbar for longer dropdown (#932)
- Add maximum height for country dropdown
- Add scroll bar for dropdown longer than maximum height

[Fixes TRAV-110]

--- a/src/components/SelectDropDown/SelectDropdown.scss
+++ b/src/components/SelectDropDown/SelectDropdown.scss
@@ -79,6 +79,8 @@ $border-color: #D4D4D4;
       cursor:pointer;
       text-align: left;
       background:white;
+      max-height: 155px;
+      overflow-y: auto;
     }
     &__item {
       @include itemsFontStyle(#4F4F4F);
